<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingDeviceActivity"
    android:background="@color/c_light_mint"
    android:screenOrientation="landscape"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.KARATDATA.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/img_karat"
            android:layout_width="122dp"
            android:layout_height="58dp"
            android:background="@color/c_toolbar"
            app:srcCompat="@mipmap/ic_k_d_foreground" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_setting_device"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/text_setting_device"
        android:textColor="@color/c_text_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/usb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/text_usb"
        android:textSize="16sp"
        android:textColor="@color/c_text_light"
        android:onClick="onRadioButtonClicked"
        android:theme="@style/RadioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tsp" />

    <RadioButton
        android:id="@+id/tsp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/text_tsp"
        android:textColor="@color/c_text_light"
        android:textSize="16sp"
        android:onClick="onRadioButtonClicked"
        android:theme="@style/RadioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_setting_device" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_port"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_field_ip"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/text_input_port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usb"
        app:startIconTint="@color/c_text_light"
        app:suffixTextColor="@color/c_label"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_port"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="92dp"
            android:textColor="@color/c_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usb"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_ip"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_field_ip"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/text_input_ip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usb"
        app:startIconTint="@color/c_text_light"
        app:suffixTextColor="@color/c_label"
        tools:ignore="MissingConstraints,NotSibling">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_ip"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/c_label"
            app:layout_constraintTop_toBottomOf="@+id/usb"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="13dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/с_turquoise"
        android:foreground="@drawable/ic_save_foreground"
        app:backgroundTint="@color/с_turquoise"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/c_grey_blue"
        android:foreground="@drawable/ic_close_foreground"
        app:backgroundTint="@color/c_grey_blue"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/fab_save"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:hint="Введите адрес прибора (slaveId)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_field_port"
        app:startIconTint="@color/c_text_light"
        app:suffixTextColor="@color/c_label"
        tools:ignore="MissingConstraints,NotSibling">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/c_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_field_port"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>